# PaperBanana

./: .all-contributorsrc  .ascii-to-svg-manifest.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  ENHANCED_PIPELINE.md  Package.swift  README.md  WORKFLOW.md  app.py  cli_generate.py  demo.py  install.sh  main.py  project.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: native-structural.yml  native-xcode27-full-gate.yml  python-tests.yml
Design/: DesignBrief.md
PaperBanana.xcodeproj/: project.pbxproj
Sources/PaperBananaApp/: AppDesignSystem.swift  AppIconController.swift  AppRootContainer.swift  AppSettingsStore.swift  ArtifactInspectorComponents.swift  ArtifactLibraryModels.swift  ArtifactLibraryPreviewComponents.swift  ArtifactLibraryScanner.swift  ArtifactLibraryStore.swift  ArtifactLibraryView.swift  ArtifactLineage.swift  BackendDiagnosticsView.swift  BackendSupervisor.swift  CodexFallbackProviderClient.swift  GoogleGeminiProviderClient.swift  LegacyPythonProviderClient.swift  MetalImagePreviewView.swift  NativeImageGenerationModels.swift  NativeImageGenerationStore.swift  NativeImageGenerationSupport.swift  NativeLocalProviderClient.swift  NativePromptStudioView.swift  NativeProviderCallRecorder.swift  NativeProviderCompletionCoordinator.swift  NativeProviderRelays.swift  NativeProviderResponsePersister.swift  NativeRefinementModels.swift  NativeRefinementStore.swift  NativeRefinementSupport.swift  NativeRefinementWorkspaceView.swift  NativeRunFolderIndex.swift  (+42 more)
agents/: critic_agent.py  planner_agent.py  polish_agent.py  retriever_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
configs/: model_config.template.yaml
docs/: CI.md  FAQ.md  INSTALL_MCP.md  INSTALL_SKILL.md  MCP_REGISTRY_SUBMISSION.md  NATIVE_MACOS_TROUBLESHOOTING.md  RELEASE_CONTRACT.md  SKILL.md  SUPPORT.md  XCODE27_NATIVE_BASELINE.md  eem3d_cnn_method.md  eem3d_pipeline_method.md  gallery.html  speed_prediction_method.md
mcp_server/: __init__.py  server.py
paperbanana_gui/: __init__.py  codex_handoff.py  native_generate.py  native_refine.py
script/: build_and_run.sh  check_native_source_control_contract.sh  check_native_xcode_contract.sh  check_xcode_project_drift.sh  ensure_xcode_icon_resource.rb  preflight_local_upgrade_rollback.sh  test_all.sh  xcode27_baseline_guard.sh
scripts/: fix_text.py
skill/: SKILL.md  clawhub.json  run.py
tests/: test_agentic_critic.py  test_app_credential_isolation.py  test_ci_contract.py  test_codex_handoff.py  test_docs_contract.py  test_legacy_generation_options.py  test_legacy_plot_agents.py  test_legacy_plot_contracts.py  test_legacy_ui_result_keys.py  test_local_openai_route.py  test_native_generate_cli.py  test_native_refine_cli.py  test_planner_metaphor.py  test_plot_execution.py  test_provider_audit_loss_protection.py  test_skill_run.py  test_wp007_voiceover_artifact_contract.py  test_wp007_voiceover_completed_packet_validator.py  test_wp107_hosted_readiness_smoke.py  test_wp108_benchmark_contract.py  test_wp108_examples_contract.py  test_wp108_human_review_packet.py  test_wp108_no_live_artifact_runner.py  test_wp108_offline_evidence_chain.py  test_wp108_quality_decision.py
utils/: config.py  generation_utils.py  legacy_generation_options.py  legacy_ui_results.py  paperviz_processor.py  plot_execution.py  provider_audit.py  wp107_hosted_readiness_smoke.py  wp108_benchmark_contract.py  wp108_human_review_packet.py  wp108_no_live_artifact_runner.py  wp108_quality_decision.py
visualize/: show_pipeline_evolution.py  show_referenced_eval.py
(+296 files in other folders)
